--- a/Notebooks/-data_create_object.ipynb
+++ b/Notebooks/-data_create_object.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_file_path = '{}/data/Scores/PE/PE_4AA_SCORES_polished.csv'.format(initial_path)\n",
+    "data_file_path = '{}/data/Scores/PE/PE_6AA_SCORES_polished.csv'.format(initial_path)\n",
     "string_list, number_list = f.read_data_file(\n",
     "    data_file_path,\n",
     "    skip_first_line=True, \n",
@@ -70,20 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(UUID('c88ccd8d-e941-4244-b754-8321da27c6e7'),\n",
-       " torch.Size([4779, 4]),\n",
-       " torch.Size([4779, 1]),\n",
-       " torch.Size([531, 4]),\n",
-       " torch.Size([531, 1]))"
+       "(UUID('d509cd07-d269-4efa-a709-4f2e2d410194'),\n",
+       " torch.Size([11284, 6]),\n",
+       " torch.Size([11284, 1]),\n",
+       " torch.Size([1254, 6]),\n",
+       " torch.Size([1254, 1]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UUID('c88ccd8d-e941-4244-b754-8321da27c6e7')"
+       "UUID('d509cd07-d269-4efa-a709-4f2e2d410194')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,22 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[10, 13, 18, 10],\n",
-       "        [ 9, 10, 14, 13],\n",
-       "        [14, 10,  4, 12],\n",
+       "tensor([[ 9, 13, 10, 14,  5,  2],\n",
+       "        [14,  1,  5, 13, 14,  5],\n",
+       "        [ 2,  4, 12, 14, 14,  5],\n",
        "        ...,\n",
-       "        [ 5, 13, 13, 10],\n",
-       "        [ 5, 11, 12, 13],\n",
-       "        [14, 12, 11,  7]], dtype=torch.int32)"
+       "        [ 2, 10, 11, 11,  5,  4],\n",
+       "        [18,  5, 13, 10, 11,  4],\n",
+       "        [13, 12,  5, 13,  9,  5]], dtype=torch.int32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
