--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -75,24 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 7, done.\u001b[K\n",
-      "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
-      "remote: Total 4 (delta 3), reused 4 (delta 3), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (4/4), 395 bytes | 65.00 KiB/s, done.\n",
+      "remote: Enumerating objects: 18, done.\u001b[K\n",
+      "remote: Counting objects: 100% (18/18), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+      "remote: Total 13 (delta 8), reused 13 (delta 8), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (13/13), 858.33 KiB | 9.54 MiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   706aa8bdd..9187311f1  main       -> origin/main\n",
-      "Updating 706aa8bdd..9187311f1\n",
+      "   6e5352d09..cada10e64  main       -> origin/main\n",
+      "Updating 6e5352d09..cada10e64\n",
       "Fast-forward\n",
-      " my_code/helper_classes.py | 3 \u001b[32m++\u001b[m\u001b[31m-\u001b[m\n",
-      " 1 file changed, 2 insertions(+), 1 deletion(-)\n"
+      " Notebooks/-data_create_object.ipynb  |   44 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " Notebooks/Plot_sweep_6h_er_Aqm.ipynb | 1067 \u001b[32m++++++++++++++++++++++++++++++++\u001b[m\n",
+      " Notebooks/sweep_6c_linear.ipynb      | 1121 \u001b[32m++++++++++++++++++++++++++++++++++\u001b[m\n",
+      " Notebooks/sweep_6h_er_Aqm_.ipynb     | 1121 \u001b[32m++++++++++++++++++++++++++++++++++\u001b[m\n",
+      " my_code/helper_classes.py            |    7 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " 5 files changed, 3343 insertions(+), 17 deletions(-)\n",
+      " create mode 100644 Notebooks/Plot_sweep_6h_er_Aqm.ipynb\n",
+      " create mode 100644 Notebooks/sweep_6c_linear.ipynb\n",
+      " create mode 100644 Notebooks/sweep_6h_er_Aqm_.ipynb\n"
      ]
     }
    ],
@@ -135,6 +142,18 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
