--- a/Notebooks/+tests.ipynb
+++ b/Notebooks/+tests.ipynb
@@ -14,6 +14,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.all([True, True, True])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
