--- a/Notebooks/+tests.ipynb
+++ b/Notebooks/+tests.ipynb
@@ -554,6 +554,22 @@
    "source": [
     "x[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def numbers_to_strings(argument):\n",
+    "    switcher = {\n",
+    "        0: \"zero\",\n",
+    "        1: \"one\",\n",
+    "        2: \"two\",\n",
+    "    }\n",
+    "    return switcher.get(argument, \"nothing\")"
+   ]
   }
  ],
  "metadata": {
