--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?1h\u001b=\u001b[H\u001b[2J\u001b[mtop - 10:06:54 up 13 days, 18:47,  1 user,  load average: 3.82, 3.70, 3.80\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
-      "Tasks:\u001b[m\u001b[m\u001b[1m 515 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m   3 \u001b[m\u001b[mrunning,\u001b[m\u001b[m\u001b[1m 510 \u001b[m\u001b[msleeping,\u001b[m\u001b[m\u001b[1m   0 \u001b[m\u001b[mstopped,\u001b[m\u001b[m\u001b[1m   2 \u001b[m\u001b[mzombie\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
-      "%Cpu(s):\u001b[m\u001b[m\u001b[1m 17.6 \u001b[m\u001b[mus,\u001b[m\u001b[m\u001b[1m  0.7 \u001b[m\u001b[msy,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mni,\u001b[m\u001b[m\u001b[1m 81.7 \u001b[m\u001b[mid,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mwa,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mhi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[msi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mst\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
-      "MiB Mem :\u001b[m\u001b[m\u001b[1m 257418.2 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m  44794.7 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m 210389.6 \u001b[m\u001b[mused,\u001b[m\u001b[m\u001b[1m   2234.0 \u001b[m\u001b[mbuff/cache\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
-      "MiB Swap:\u001b[m\u001b[m\u001b[1m   2048.0 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m      0.2 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m   2047.8 \u001b[m\u001b[mused.\u001b[m\u001b[m\u001b[1m  44967.4 \u001b[m\u001b[mavail Mem \u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "\u001b[?1h\u001b=\u001b[H\u001b[2J\u001b[mtop - 18:25:35 up 14 days,  3:06,  1 user,  load average: 3.48, 3.34, 3.46\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "Tasks:\u001b[m\u001b[m\u001b[1m 519 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m   3 \u001b[m\u001b[mrunning,\u001b[m\u001b[m\u001b[1m 514 \u001b[m\u001b[msleeping,\u001b[m\u001b[m\u001b[1m   0 \u001b[m\u001b[mstopped,\u001b[m\u001b[m\u001b[1m   2 \u001b[m\u001b[mzombie\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "%Cpu(s):\u001b[m\u001b[m\u001b[1m 10.7 \u001b[m\u001b[mus,\u001b[m\u001b[m\u001b[1m  0.5 \u001b[m\u001b[msy,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mni,\u001b[m\u001b[m\u001b[1m 88.9 \u001b[m\u001b[mid,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mwa,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mhi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[msi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mst\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "MiB Mem :\u001b[m\u001b[m\u001b[1m 257418.2 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m 103042.1 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m 153300.8 \u001b[m\u001b[mused,\u001b[m\u001b[m\u001b[1m   1075.4 \u001b[m\u001b[mbuff/cache\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "MiB Swap:\u001b[m\u001b[m\u001b[1m   2048.0 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m      0.0 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m   2048.0 \u001b[m\u001b[mused.\u001b[m\u001b[m\u001b[1m 102074.9 \u001b[m\u001b[mavail Mem \u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
       "\u001b[K\n",
       "\u001b[7m    PID USER      PR  NI    VIRT    RES    SHR S  %CPU  %MEM     TIME+ COMMAND  \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m\u001b[1m  67115 raul      20   0   62.7g  43.2g  32492 R 264.7  17.2  12840:55 python   \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m\u001b[1m  67819 raul      20   0   77.4g  57.9g  32600 R 170.6  23.0  11181:03 python   \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m   3795 raul      20   0 2172084   1.7g   8432 S   5.9   0.7 427:36.07 jupyter+ \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m\u001b[1m  84911 raul      20   0    9648   4112   3192 R   5.9   0.0   0:00.03 top      \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m      1 root      20   0  171400   8972   4544 S   0.0   0.0   0:17.01 systemd  \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m\u001b[1m  67115 raul      20   0   62.7g  43.2g  30860 R 125.0  17.2  13952:17 python   \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m\u001b[1m  86256 raul      20   0   21.2g   2.0g 183356 R 106.2   0.8  67:36.39 python   \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m   3795 raul      20   0 2264632   1.8g   8248 S   6.2   0.7 438:01.04 jupyter+ \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m  62155 gdm       20   0 2433392  27468   2776 S   6.2   0.0  36:58.80 anydesk  \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m\u001b[1m  86451 raul      20   0    9648   4168   3252 R   6.2   0.0   0:00.02 top      \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m      1 root      20   0  171400   8592   4164 S   0.0   0.0   0:17.35 systemd  \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m      2 root      20   0       0      0      0 S   0.0   0.0   0:00.13 kthreadd \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m      3 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 rcu_gp   \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m      4 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 rcu_par+ \u001b[m\u001b[m\u001b[K\n",
@@ -30,23 +31,23 @@
       "\u001b[m     10 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 mm_perc+ \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m     11 root      20   0       0      0      0 S   0.0   0.0   0:00.00 rcu_tas+ \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m     12 root      20   0       0      0      0 S   0.0   0.0   0:00.00 rcu_tas+ \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m     13 root      20   0       0      0      0 S   0.0   0.0   0:01.34 ksoftir+ \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m     14 root      20   0       0      0      0 I   0.0   0.0  30:41.79 rcu_sch+ \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m     15 root      rt   0       0      0      0 S   0.0   0.0   0:02.23 migrati+ \u001b[m\u001b[m\u001b[K\u001b[H\u001b[mtop - 10:06:57 up 13 days, 18:47,  1 user,  load average: 3.67, 3.68, 3.79\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m     13 root      20   0       0      0      0 S   0.0   0.0   0:01.38 ksoftir+ \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m     14 root      20   0       0      0      0 I   0.0   0.0  31:29.02 rcu_sch+ \u001b[m\u001b[m\u001b[K\u001b[H\u001b[mtop - 18:25:38 up 14 days,  3:06,  1 user,  load average: 3.36, 3.32, 3.45\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
       "\n",
-      "%Cpu(s):\u001b[m\u001b[m\u001b[1m 17.5 \u001b[m\u001b[mus,\u001b[m\u001b[m\u001b[1m  0.1 \u001b[m\u001b[msy,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mni,\u001b[m\u001b[m\u001b[1m 82.3 \u001b[m\u001b[mid,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mwa,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mhi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[msi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mst\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
-      "MiB Mem :\u001b[m\u001b[m\u001b[1m 257418.2 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m  44794.2 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m 210389.6 \u001b[m\u001b[mused,\u001b[m\u001b[m\u001b[1m   2234.5 \u001b[m\u001b[mbuff/cache\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
-      "MiB Swap:\u001b[m\u001b[m\u001b[1m   2048.0 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m      0.2 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m   2047.8 \u001b[m\u001b[mused.\u001b[m\u001b[m\u001b[1m  44967.3 \u001b[m\u001b[mavail Mem \u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "%Cpu(s):\u001b[m\u001b[m\u001b[1m 13.6 \u001b[m\u001b[mus,\u001b[m\u001b[m\u001b[1m  0.1 \u001b[m\u001b[msy,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mni,\u001b[m\u001b[m\u001b[1m 86.3 \u001b[m\u001b[mid,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mwa,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mhi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[msi,\u001b[m\u001b[m\u001b[1m  0.0 \u001b[m\u001b[mst\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "MiB Mem :\u001b[m\u001b[m\u001b[1m 257418.2 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m 103041.2 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m 153301.4 \u001b[m\u001b[mused,\u001b[m\u001b[m\u001b[1m   1075.7 \u001b[m\u001b[mbuff/cache\u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
+      "MiB Swap:\u001b[m\u001b[m\u001b[1m   2048.0 \u001b[m\u001b[mtotal,\u001b[m\u001b[m\u001b[1m      0.0 \u001b[m\u001b[mfree,\u001b[m\u001b[m\u001b[1m   2048.0 \u001b[m\u001b[mused.\u001b[m\u001b[m\u001b[1m 102074.3 \u001b[m\u001b[mavail Mem \u001b[m\u001b[m\u001b[m\u001b[m\u001b[K\n",
       "\u001b[K\n",
       "\n",
-      "\u001b[m\u001b[1m  67115 raul      20   0   62.7g  43.2g  32492 R 270.1  17.2  12841:03 python   \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m\u001b[1m  67819 raul      20   0   77.4g  57.9g  32600 R 146.8  23.0  11181:08 python   \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m  62647 raul      20   0  530272  52908   6364 S   2.3   0.0   0:17.79 python   \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m   3795 raul      20   0 2172084   1.7g   8432 S   2.0   0.7 427:36.13 jupyter+ \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m   1177 root      20   0  275432  35528   7412 S   0.3   0.0  27:55.88 Xorg     \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m  62155 gdm       20   0 2433392  27200   2508 S   0.3   0.0  35:00.68 anydesk  \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m\u001b[1m  84911 raul      20   0    9648   4112   3192 R   0.3   0.0   0:00.04 top      \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m      1 root      20   0  171400   8972   4544 S   0.0   0.0   0:17.01 systemd  \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m\u001b[1m  67115 raul      20   0   62.7g  43.2g  30860 R 225.8  17.2  13952:23 python   \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m\u001b[1m  86256 raul      20   0   21.2g   2.0g 183356 R 100.3   0.8  67:39.42 python   \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m   3795 raul      20   0 2264632   1.8g   8248 S   2.6   0.7 438:01.12 jupyter+ \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m  62647 raul      20   0  530528  54956   8024 S   2.3   0.0   0:19.54 python   \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m\u001b[1m  86451 raul      20   0    9648   4168   3252 R   0.7   0.0   0:00.04 top      \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m     14 root      20   0       0      0      0 I   0.3   0.0  31:29.03 rcu_sch+ \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m   1373 root      20   0  609016  51288  10416 S   0.3   0.0  41:19.05 node     \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m   3372 tianhong  20   0 5451356      0      0 S   0.3   0.0   0:51.28 python   \u001b[m\u001b[m\u001b[K\n",
+      "\u001b[m      1 root      20   0  171400   8592   4164 S   0.0   0.0   0:17.35 systemd  \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m      2 root      20   0       0      0      0 S   0.0   0.0   0:00.13 kthreadd \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m      3 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 rcu_gp   \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m      4 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 rcu_par+ \u001b[m\u001b[m\u001b[K\n",
@@ -54,8 +55,7 @@
       "\u001b[m      6 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 netns    \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m      8 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 kworker+ \u001b[m\u001b[m\u001b[K\n",
       "\u001b[m     10 root       0 -20       0      0      0 I   0.0   0.0   0:00.00 mm_perc+ \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m     11 root      20   0       0      0      0 S   0.0   0.0   0:00.00 rcu_tas+ \u001b[m\u001b[m\u001b[K\n",
-      "\u001b[m     12 root      20   0       0      0      0 S   0.0   0.0   0:00.00 rcu_tas+ \u001b[m\u001b[m\u001b[K\u001b[?1l\u001b>\u001b[25;1H\n",
+      "\u001b[m     11 root      20   0       0      0      0 S   0.0   0.0   0:00.00 rcu_tas+ \u001b[m\u001b[m\u001b[K\u001b[?1l\u001b>\u001b[25;1H\n",
       "\u001b[K"
      ]
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -86,13 +86,13 @@
       "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
       "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
       "remote: Total 4 (delta 3), reused 4 (delta 3), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (4/4), 368 bytes | 52.00 KiB/s, done.\n",
+      "Unpacking objects: 100% (4/4), 358 bytes | 51.00 KiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   c81c4a114..ab55e28ef  main       -> origin/main\n",
-      "Updating c81c4a114..ab55e28ef\n",
+      "   e143aa28a..c7cd4b597  main       -> origin/main\n",
+      "Updating e143aa28a..c7cd4b597\n",
       "Fast-forward\n",
-      " my_code/pytorch_model.py | 5 \u001b[32m+\u001b[m\u001b[31m----\u001b[m\n",
-      " 1 file changed, 1 insertion(+), 4 deletions(-)\n"
+      " my_code/pytorch_model.py | 1 \u001b[31m-\u001b[m\n",
+      " 1 file changed, 1 deletion(-)\n"
      ]
     }
    ],
