--- a/Notebooks/_nomenclature.ipynb
+++ b/Notebooks/_nomenclature.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ab_c_d_x.ipynb\n",
+    "# ab_c_d_x_O.ipynb\n",
     "\n",
     "a ->\n",
     "\n",
@@ -34,6 +34,12 @@
     "\n",
     "    - 1qm: 1-qubit measurement\n",
     "    - Aqm: All-qubit measurement\n",
+    "\n",
+    "O ->\n",
+    "\n",
+    "    - _Nothing_\n",
+    "    - oi: optimization of the input -> generate peptides\n",
+    "\n",
     "\n"
    ]
   }
