--- a/Notebooks/optimize input.ipynb
+++ b/Notebooks/optimize input.ipynb
@@ -205,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 18, 16, 16, 5, 5), score: -18.2578                    "
+      "(5, 14, 5, 5, 5, 5), score: -24.8717                    "
      ]
     }
    ],
@@ -223,7 +223,7 @@
     "    optimizer = m.torch.optim.Adam,\n",
     "    optimizer_options = {'lr': 0.1},\n",
     "    stop_criterion = 1e-4,\n",
-    "    initialization_seed = 4,\n",
+    "    initialization_seed = 5,\n",
     ")"
    ]
   },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -252,10 +252,11 @@
        " ((5, 18, 16, 16, 5, 5), -18.257755150663982),\n",
        " ((16, 18, 16, 16, 5, 4), -13.38504707477991),\n",
        " ((5, 5, 4, 5, 5, 5), -24.146447206802897),\n",
-       " ((5, 18, 16, 16, 5, 5), -18.257755150663982)]"
+       " ((5, 18, 16, 16, 5, 5), -18.257755150663982),\n",
+       " ((5, 14, 5, 5, 5, 5), -24.871747690395168)]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,6 +285,24 @@
    ],
    "source": [
     "model.optimized_inputs_unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 14, 5, 5, 5, 5) -24.871747690395168\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_oi, best_oi_score = model.best_optimized_input\n",
+    "print(best_oi, best_oi_score)"
    ]
   }
  ],
